# read-emd

./: LICENSE  README.md  pyproject.toml  setup.cfg
reademd/: __init__.py  reademd.py
